--- a/src/Footer.css
+++ b/src/Footer.css
@@ -3,22 +3,19 @@
   bottom:0;
   z-index: 8;
   color: white;
-  background-color: lightgrey;
 }
 .footer {
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
   justify-content: space-evenly;
-  height: 2.5rem;
-  /* background-color: blue; */
 }
 .footer-item {
   height: 2.5rem;
-  width:2.5rem;
+  width: 2.5rem;
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -28,12 +25,11 @@
 /* UI Icons */
 .footer-chat-icon {
   border-radius: 0.25rem;
-  height: 2rem;
-  width: 2rem;
-  
+  height: 1.4rem;
+  width: 1.4rem;
 }
 .footer-camera-icon {
-  height: 2.3rem;
-  width: 2.3rem;
+  height: 1.7rem;
+  width: 1.7rem;
   border-radius: 0.25rem;
 }
